src/objects/crms11__Product_Location__c.object
<CustomObject>
    <description>FlexPricer Product Location object to connect a Salesforce Product to a Location.</description>
    <fields>
        <fullName>crms11__In_Stock__c</fullName>
        <label>In Stock</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>crms11__Location__c</referenceTo>
        <relationshipLabel>Product Locations</relationshipLabel>
        <relationshipName>Product_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>crms11__Most_Recent_Back_Order_Date__c</fullName>
        <label>Most Recent Back Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>crms11__On_Back_Order__c</fullName>
        <label>On Back Order</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>crms11__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Locations</relationshipLabel>
        <relationshipName>Product_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Location</label>
    <nameField>
        <displayFormat>PL-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>